tests/ui/variance/variance-trait-object-bound.stderr
error: [+]
  --> $DIR/variance-trait-object-bound.rs:14:1
   |
LL | struct TOption<'a> {
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

